# discordpy

./: .replit  Procfile  README.md  commands.py  config.json  confing.json  data.json  discord.db  index.py  main.py  message.json  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: black.yml
config/: config.json  data.json
discordbot/: __init__.py  apex.py  bot.py  channel.py  commands.py  commands_fn.py  commands_test.py  db.py  fortnite.py  music.py  poll.py  setup.py  test.py  web.py
discordbot/poll/: meta.py  poll.py
modules/: __init__.py  bot.py  commands.py  commands_apex.py  commands_channel.py  commands_chess.py  commands_fn.py  commands_test.py  setup.py  web.py
