[tool.poetry]
name = "discordpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
scrape = "^0.10.1"
discord = "^1.0.1"
gtts = "^2.2.1"
youtube-dl = "^2021.1.16"
async-timeout = "^3.0.1"
pytz = "^2020.5"
feedparser = "^6.0.2"
disputils = "^0.1.3"
sanic = "^20.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"