[tool.poetry]
name = "discordpy"
version = "0.1.0"
description = ""
authors = ["HRTK92 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^3.0.1"
discord = "^1.0.1"
feedparser = "^6.0.2"
gtts = "^2.2.2"
pytz = "^2021.1"
sanic = "^21.3.4"
youtube-dl = "^2021.4.26"
aiohttp = "^3.7.4"
black = "^21.5b0"
discord-py-slash-command = "^1.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"